web.deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: homework
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homework
  template:
    metadata:
      labels:
        app: homework
    spec:
      containers:
      - name: emoncms-web
        image: harbor.high.am/danhigham/homework:latest
        ports:
        - containerPort: 8080
