web.ingress.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: homework-web-ingress
  annotations:
    kubernetes.io/tls-acme: "true"
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - homework.high.am
    secretName: homework-tls
  rules:
  - host: homework.high.am
    http:
      paths:
      - path: /
        backend:
          serviceName: homework-http
          servicePort: 8080
